plugins {
    id 'org.gretty' version '4.1.10'
}

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    plugins.withType(JavaPlugin).tap {
        configureEach {
            java {
                toolchain {
                    languageVersion = JavaLanguageVersion.of(21)
                }
            }
        }
    }
}

gretty {
    servletContainer = 'tomcat10'
}

farm {
    webapp ':internalcrm'
    webapp ':virtualcrm'
}
